@@ -4,10 +4,8 @@ import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -23,22 +21,19 @@ import com.simplevat.dao.InvoiceDao;
 import com.simplevat.dao.JournalDao;
 import com.simplevat.dao.JournalLineItemDao;
 import com.simplevat.dao.SupplierInvoicePaymentDao;
-import com.simplevat.entity.CustomerInvoiceReceipt;
 import com.simplevat.entity.Invoice;
 import com.simplevat.entity.JournalLineItem;
-import com.simplevat.entity.SupplierInvoicePayment;
 import com.simplevat.model.OverDueAmountDetailsModel;
 import com.simplevat.rest.DropdownModel;
 import com.simplevat.rest.PaginationModel;
 import com.simplevat.rest.PaginationResponseModel;
-import com.simplevat.rest.invoicecontroller.InvoiceRestController;
 import com.simplevat.service.InvoiceService;
 import com.simplevat.utils.ChartUtil;
 import com.simplevat.utils.DateUtils;
 
 @Service("SupplierInvoiceService")
 public class InvoiceServiceImpl extends InvoiceService {
-	private final Logger logger = LoggerFactory.getLogger(InvoiceRestController.class);
+	private final Logger logger = LoggerFactory.getLogger(InvoiceServiceImpl.class);
 
 	@Autowired
 	private InvoiceDao supplierInvoiceDao;
@@ -87,7 +82,7 @@ public class InvoiceServiceImpl extends InvoiceService {
 		Invoice invoice = supplierInvoiceDao.getLastInvoice();
 		if (invoice != null) {
 			try {
-				return new Integer(invoice.getReferenceNumber()) + 1;
+				return Integer.valueOf(invoice.getReferenceNumber()) + 1;
 			} catch (Exception e) {
 				return 0;
 			}
@@ -112,9 +107,7 @@ public class InvoiceServiceImpl extends InvoiceService {
 
 	@Override
 	public OverDueAmountDetailsModel getOverDueAmountDetails(Integer type) {
-
-		OverDueAmountDetailsModel overDueAmountDetails = supplierInvoiceDao.getOverDueAmountDetails(type);
-		return overDueAmountDetails;
+    return supplierInvoiceDao.getOverDueAmountDetails(type);
 	}
 
 	/**
@@ -163,46 +156,7 @@ public class InvoiceServiceImpl extends InvoiceService {
 	@Override
 	public List<Invoice> getSuggestionInvoices(BigDecimal amount, Integer contactId, ContactTypeEnum type,
 			Integer userId) {
-
-		List<Invoice> responseList = new ArrayList<Invoice>();
-		Set<Integer> mappedInvIdSet = new HashSet<>();
-		List<Invoice> mappedInvoices = new ArrayList<>();
-		if (ContactTypeEnum.CUSTOMER.equals(type)) {
-			List<CustomerInvoiceReceipt> mappedCustomerInvoiceReceipt = customerInvoiceReceiptDao.dumpData();
-			mappedInvoices = getMappedCustomerInvoices(mappedCustomerInvoiceReceipt);
-		} else {
-			List<SupplierInvoicePayment> mappedsupplierInvoicePayment = supplierInvoicePaymentDao.dumpData();
-			mappedInvoices = getMappedSupplierInvoices(mappedsupplierInvoicePayment);
-		}
-		if (mappedInvoices != null && !mappedInvoices.isEmpty())
-			for (Invoice invoice : mappedInvoices) {
-				mappedInvIdSet.add(invoice.getId());
-			}
-
-		List<Invoice> invoiceList = supplierInvoiceDao.getSuggestionUnpaidInvoices(amount, contactId, type, userId);
-		if (invoiceList != null && !invoiceList.isEmpty()) {
-			for (Invoice invoice : invoiceList) {
-				if (!mappedInvIdSet.contains(invoice.getId())) {
-					responseList.add(invoice);
-				}
-			}
-		}
-		return responseList;
+		return supplierInvoiceDao.getSuggestionUnpaidInvoices(amount, contactId, type, userId);
 	}
 
-	private List<Invoice> getMappedCustomerInvoices(List<CustomerInvoiceReceipt> mappedCustomerInvoiceReceipt) {
-		List<Invoice> invoiceList = new ArrayList<Invoice>();
-		for (CustomerInvoiceReceipt customerInvoiceReceipt : mappedCustomerInvoiceReceipt) {
-			invoiceList.add(customerInvoiceReceipt.getCustomerInvoice());
-		}
-		return invoiceList;
-	}
-
-	private List<Invoice> getMappedSupplierInvoices(List<SupplierInvoicePayment> mappedCustomerInvoicePayment) {
-		List<Invoice> invoiceList = new ArrayList<Invoice>();
-		for (SupplierInvoicePayment supplierInvoicePayment : mappedCustomerInvoicePayment) {
-			invoiceList.add(supplierInvoicePayment.getSupplierInvoice());
-		}
-		return invoiceList;
-	}
 }
